fixing up spacing

--- a/content/CV/styles.css
+++ b/content/CV/styles.css
@@ -178,6 +178,38 @@ a:hover {
     grid-area: role-attrs;
   }
 
+  .skill-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    height: 90%;
+    width: 100%;
+  }
+
+  .bar-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .big-box {
+    border: solid 2px var(--hotpink);
+    height: 50px;
+  }
+
+  .big-box:first-child {
+    background-color: var(--hotpink);
+  }
+  
+  .big-box:last-child {
+    border-left: 0;
+  }
+
+  .skill-title {
+    line-height: 5vh;
+  }
+
   /* Desktop and Tablet */
   @media (min-width : 700px) {
 
@@ -222,10 +254,18 @@ a:hover {
       grid-row: 2/3;
     }
 
+    .link-container {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      flex-wrap: wrap;
+    }
+
     .social {
       grid-column: 1/2;
       grid-row: 3/4;
-      display: flex;
     }
 
     .social svg {
